# coverity-connect-mcp

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.html  README.md  README_ja.md  README_tmp.html  deploy_production.bat  dummy_coverity_server.py  pyproject.toml  requirements.txt  start_production.bat
.github/workflows/: publish.yml  security-only.yml  security.yml  test.yml  test.yml.bak
docs/: GETTING_STARTED.md  GITHUB_COPILOT_SETTINGS.md  PRODUCTION_README.md  SETUP_GUIDE.md  additional-config-files.txt  api.md  class_design_uml.md  configuration.md  coverity-mcp-japanese-guide.md  coverity_mcp_functional_spec.md  coverity_users_table.md  docker-files.txt  dxt_packaging_guide.md  function_specifications.md  github-repository-structure.html  github-repository-structure.md  installation.md  project-documentation.md  project_completion_plan.md  pypi_publish_workflow.txt  pyproject-toml.txt  query_example.html  query_example.md  query_example.txt  query_example_tmp.html  query_example_tmp.md  query_example_tmp_tmp.html  requirements.txt  sanitized_pyproject_toml.txt  sequence_diagrams.md  system_architecture_design.md  vscode_mcp_setup_guide.md  会話の様子.html  会話の様子.md  会話の様子_tmp.html  環境変数.txt
docs/ja/: api.md  configuration.md  installation.md
docs/新しいフォルダー/: coverity_mcp_query_sample.html  coverity_mcp_query_sample.md
examples/development/: .env.development  README_dev.md  claude_desktop_config.json  mock_server.py
examples/production/: .env.production  README_prod.md  claude_desktop_config.json
scripts/: deploy_production.bat  legacy_test_mcp_local.bat  setup_env_template.bat  start_dev.bat  start_mock_server.bat
src/coverity_mcp_server/: __init__.py  __main__.py  config.py  coverity_client.py  coverity_client_production.py  main.py  main_production.py  prompts.py  resources.py  test_connection.py  tools.py
tests/: __init__.py  test_config.py  test_tools.py
